--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Coatable: Stay Bold, Not Cold
+title: Stay Bold, Not Cold
 description: Providing parents an affordable clothing solution for their growing children
