--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Stay Bold, Not Cold
-description: Providing parents an affordable clothing solution for their growing children
+title: Coatable
+description: Stay Bold, Not Cold
